# golden-standard

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  block_moving_env.py  helios_env_gen.sh  helios_run_test.sh  pyproject.toml
.github/: copilot-instructions.md
impls/: benchmark_test.py  block_moving_env.py  block_moving_env_debug.ipynb  crl_minimal.py  data_collection.py  rb.py  rb_sanity_check.py  rb_test.py  speed_debug.ipynb
impls/agents/: crl.py
notebooks/: 12_08_25_MB_distillation.ipynb  12_08_25_MB_distillation_rolled.ipynb  13_08_25_MB_check_data.ipynb  14_08_25_MB_distillation_exact_softmax_q.ipynb  14_08_25_MB_distillation_exact_softmax_q_bc.ipynb  15_08_25_MB_distillation_exact_softmax_q.ipynb  15_08_25_MB_distillation_exact_softmax_q_bc.ipynb  18_07_25_MB_post_hoc_analysis.ipynb  18_08_25_MB_q_analysis.ipynb  19_08_25_MB_q_overest_generalization_through_training.ipynb  20_08_25_MB_embeddings_investigation.ipynb  22_08_25_MB_RB_next_state_sc.ipynb  29_08_25_MB_GCIQL_analysis.ipynb  31_08_25_MB_dqn_investigation.ipynb  dataset_inspector.ipynb  distillation.py  dqn_transformer_profile.ipynb  fast_data_pipeline.ipynb  gather_trajectories.ipynb  optimal_trajectories_6x6_5boxes.ipynb
notebooks/plotting/: 02_10_25_MB_post_hoc_q_dqn_analysis.ipynb  02_10_25_MB_posthoc_q_analysis_clean.ipynb  05_11_25_MB_diagonal_s_g_Q_analysis.ipynb  13_10_25_MB_post_hoc_crl_analysis.ipynb  README.md  generate_many_gifs.py  play_and_visualize_q.ipynb  play_and_visualize_q_crl.ipynb  play_and_visualize_q_dqn.ipynb  plot.ipynb  plot_gamma_scaling.ipynb  plot_generalized.ipynb  plot_generalized_scaling _scatter.ipynb  plot_generalized_scaling.ipynb  plot_generalized_scaling_curves.ipynb  plot_hparams.ipynb  plot_main.ipynb  plot_quasi.ipynb  plot_runtime.ipynb  utils.py
scripts/: 1.sh  benchmark_optimal_q.py  gather_expert_dataset.py  job.sbatch  pretty_render.py  run_experiment.sh  run_parallel.sh  run_parallel_baseline.sh
scripts/paper_experiments/: run_default_paper_exp.sh  run_generalized_paper_exp.sh
scripts/plotting/: plot.ipynb  utils.py
scripts/screen/: clearn_many_cards.sh  clearn_td.sh  clearn_td_exact.sh  clearn_td_many_boxes.sh  crl_many_cards.sh  crl_mc.sh  crl_mc_exact.sh  crl_mc_many_boxes.sh  crl_mc_target_ent.sh  crl_search_cnn.sh  crl_transformer.sh  dqn_cnn.sh  dqn_interp_exact.sh  dqn_interp_generalized.sh  dqn_interp_td_many.sh  dqn_interp_td_many_onehot.sh  dqn_lstm_exact.sh  dqn_lstm_td.sh  dqn_lstm_td_many.sh  dqn_lstm_td_many_emb.sh  dqn_lstm_td_many_onehot.sh  dqn_many_cards.sh  dqn_mc.sh  dqn_td.sh  dqn_td_exact.sh  dqn_td_many_boxes.sh  dqn_td_target_entr.sh  (+15 more)
src/: block_moving_env.py  config.py  debug.ipynb  main.py  minigrid_data_collection.py  minigrid_rb_test.py  optimal_q.py  rb.py  speed_debug.ipynb  tests.py  train.py  train_obbt.py  utils.py
(+51 files in other folders)
