[project]
name = "crl-subgoal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "distrax>=0.1.5",
    "flax>=0.8.4",
    "jax[cuda12]>=0.4.26; platform_system != 'Darwin'",
    "jax>=0.4.26; platform_system == 'Darwin'",
    "matplotlib>=3.10.3",
    "ml-collections>=1.1.0",
    "moviepy>=2.2.1",
    "ogbench>=1.1.2",
    "ott-jax>=0.6.0",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "ruff>=0.11.11",
    "tqdm>=4.67.1",
    "tyro>=0.9.26",
    "wandb>=0.19.11",
    "aiofiles==25.1.0",
    "ipywidgets==8.1.8",
    "jupyterlab-widgets==3.0.16",
    "nvidia-cuda-cccl-cu12==12.9.27",
    "nvidia-cuda-nvrtc-cu12==12.9.86",
    "tensorflow-probability>=0.25.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "rliable>=1.2.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.9.post2",
]

[tool.ruff]
# Max line length for linting and formatting
line-length = 120

exclude = [
    "src/impls/",
    "notebooks/",
    "*.ipynb",
]
